tests/NormalTests/paczka1/fuzzy1/97728341.err
Error in line 4: yVvgqRtTP S612 58,8
Error in line 8: g8eOFXkre8 A635 43,2
Error in line 10: g8eOFXkre8 A58 93,5
Error in line 25: A497 A58 99,3
Error in line 15: 9Yjo78Tjk0 S612 34,4
